--- a/sam-template.yaml
+++ b/sam-template.yaml
@@ -1,12 +1,18 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
+Globals:
+  Api:
+    Cors:
+      AllowMethods: "'*'"
+      AllowHeaders: "'*'"
+      AllowOrigin: "'*'"
 Resources:
   SamShipsTable:
     Type: AWS::Serverless::SimpleTable
   SamShipsWebAPI:
     Type: AWS::Serverless::Function
     Properties:
-      Runtime: dotnetcore3.1
+      Runtime: dotnet6
       Handler: SamShips.WebAPI::SamShips.WebAPI.LambdaEntryPoint::FunctionHandlerAsync
       CodeUri: ./artifacts/SamShips.WebAPI.zip
       MemorySize: 256
@@ -32,7 +38,7 @@ Resources:
   SamShipsHeartbeat:
     Type: AWS::Serverless::Function
     Properties:
-      Runtime: dotnetcore3.1
+      Runtime: dotnet6
       Handler: SamShips.Heartbeat::SamShips.Heartbeat.Entrypoint::Handler
       CodeUri: ./artifacts/SamShips.Heartbeat.zip
       AutoPublishAlias: SamShipsHeartbeatAlias
@@ -47,9 +53,38 @@ Resources:
       #     Type: Schedule
       #     Properties:
       #       Schedule: rate(1 minute)
-Globals:
-  Api:
-    Cors:
-      AllowMethods: "'*'"
-      AllowHeaders: "'*'"
-      AllowOrigin: "'*'"
+  SamShipsCdnUser:
+    Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
+    Properties:
+      CloudFrontOriginAccessIdentityConfig:
+        Comment: User that CloudFront uses to access S3
+  SamShipsCdn:
+    Type: AWS::CloudFront::Distribution
+    Properties:
+      DistributionConfig:
+        Origins:
+        - DomainName: nino-samships-frontend.s3.eu-west-1.amazonaws.com
+          Id: samshipsFrontendS3
+          S3OriginConfig:
+            OriginAccessIdentity: !Join 
+              - '/' 
+              - - 'origin-access-identity'
+                - 'cloudfront'
+                - !Ref SamShipsCdnUser
+        Enabled: 'true'
+        Comment: Frontend for SamShips
+        DefaultRootObject: index.html
+        DefaultCacheBehavior:
+          AllowedMethods:
+          - GET
+          - HEAD
+          - OPTIONS
+          TargetOriginId: samshipsFrontendS3
+          ForwardedValues:
+            QueryString: 'true'
+            Cookies:
+              Forward: none
+          ViewerProtocolPolicy: allow-all
+        PriceClass: PriceClass_200
+        ViewerCertificate:
+          CloudFrontDefaultCertificate: 'true'
