--- a/src/Backend/SamShips.Heartbeat/SamShips.Heartbeat.csproj
+++ b/src/Backend/SamShips.Heartbeat/SamShips.Heartbeat.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 	<Nullable>enable</Nullable>
 	<WarningsAsErrors>CS8600;CS8602;CS8603;CS8613;CS8601;CS8625;CS8604;CS8618;CS8777</WarningsAsErrors>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
@@ -12,15 +12,15 @@
     <PackageReference Include="Amazon.Lambda.Core" Version="2.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.2.0" />
 	  
-	<PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Localization" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.18" />
+	<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Localization" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
 
 	<PackageReference Include="Serilog" Version="2.10.0" />
 	<PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
