--- a/src/Backend/SamShips.WebAPI/SamShips.WebAPI.csproj
+++ b/src/Backend/SamShips.WebAPI/SamShips.WebAPI.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 	<Nullable>enable</Nullable>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     <AWSProjectType>Lambda</AWSProjectType>
@@ -13,15 +13,15 @@
 	<PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="5.3.1" />
 	<PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.2.20" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
-	<PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Localization" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="3.1.18" />
-	<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.18" />
+	<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.1" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Localization" Version="6.0.2" />
+	<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
 
 	<PackageReference Include="Serilog" Version="2.10.0" />
 	<PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
